--- a/modules/app/src/main/res/layouts/fragments/layout/recurring_class_table_row.xml
+++ b/modules/app/src/main/res/layouts/fragments/layout/recurring_class_table_row.xml
@@ -8,6 +8,18 @@
         <variable
             name="scheduleClass"
             type="com.lonn.studentassistant.firebaselayer.viewModels.abstractions.ScheduleClassViewModel" />
+
+        <variable
+            name="deletable"
+            type="Boolean" />
+
+        <variable
+            name="editing"
+            type="Boolean" />
+
+        <variable
+            name="permissionLevel"
+            type="Integer" />
     </data>
 
     <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
@@ -45,7 +57,7 @@
             style="@style/DarkBlueShadowedH3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.60"
+            android:layout_weight="@{permissionLevel != null &amp;&amp; permissionLevel > 0 &amp;&amp; editing!=null &amp;&amp; editing &amp;&amp; deletable!=null &amp;&amp; deletable? 0.5f:0.6f}"
             android:gravity="center"
             android:maxLines="@{3}"
             android:padding="2dp"
@@ -94,5 +106,25 @@
             android:layout_width="2dp"
             android:layout_height="match_parent"
             android:background="@color/colorPrimaryDark" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/entityDeleteButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="4dp"
+            android:layout_weight="0.1"
+            android:onClick="tapRemove"
+            android:scaleType="fitCenter"
+            android:visibility="@{permissionLevel != null &amp;&amp; permissionLevel > 0 &amp;&amp; editing!=null &amp;&amp; editing &amp;&amp; deletable!=null &amp;&amp; deletable? View.VISIBLE:View.GONE}"
+            app:layout_constraintBottom_toBottomOf="@id/entityField3"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/entityField1"
+            app:srcCompat="@android:drawable/ic_menu_delete" />
+
+        <RelativeLayout
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark"
+            android:visibility="@{permissionLevel != null &amp;&amp; permissionLevel > 0 &amp;&amp; editing!=null &amp;&amp; editing &amp;&amp; deletable!=null &amp;&amp; deletable? View.VISIBLE:View.GONE}"/>
     </TableRow>
 </layout>
