--- a/modules/app/src/main/res/layouts/adapters/layout/category_layout.xml
+++ b/modules/app/src/main/res/layouts/adapters/layout/category_layout.xml
@@ -71,10 +71,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/layoutCategoryHeader"
-            android:layout_marginStart="@{categoryModel.showHeader &amp;&amp; !isTable? @dimen/dim_10dp : @dimen/dim_0dp}"
-            android:layout_marginTop="@{categoryModel.showHeader &amp;&amp; !isTable? @dimen/dim_8dp : @dimen/dim_0dp}"
-            android:layout_marginEnd="@{categoryModel.showHeader &amp;&amp; !isTable?  @dimen/dim_10dp : @dimen/dim_0dp}"
-            android:layout_marginBottom="@{categoryModel.showHeader &amp;&amp; !isTable?  @dimen/dim_10dp : @dimen/dim_0dp}"
+            android:layout_marginStart="@{categoryModel.showHeader &amp;&amp; ((isTable &amp;&amp; !categoryModel.endCategory) || !isTable)? @dimen/dim_10dp : @dimen/dim_0dp}"
+            android:layout_marginTop="@{categoryModel.showHeader &amp;&amp; ((isTable &amp;&amp; !categoryModel.endCategory) || !isTable)? @dimen/dim_10dp : @dimen/dim_0dp}"
+            android:layout_marginEnd="@{categoryModel.showHeader &amp;&amp; ((isTable &amp;&amp; !categoryModel.endCategory) || !isTable)? @dimen/dim_10dp : @dimen/dim_0dp}"
+            android:layout_marginBottom="@{categoryModel.showHeader &amp;&amp; ((isTable &amp;&amp; !categoryModel.endCategory) || !isTable)? @dimen/dim_10dp : @dimen/dim_0dp}"
             android:orientation="vertical"
             android:visibility="@{categoryModel.showHeader? View.GONE : View.VISIBLE}">
 
