--- a/modules/app/src/main/res/layouts/fragments/layout/recurring_class_input_dialog.xml
+++ b/modules/app/src/main/res/layouts/fragments/layout/recurring_class_input_dialog.xml
@@ -271,6 +271,7 @@
                 android:text="(none)" />
 
             <LinearLayout
+                android:id="@+id/classDialogGroupSelectionLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
