--- a/modules/app/src/main/res/layouts/activities/otherActivityEntityActivity/layout/other_activity_entity_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/otherActivityEntityActivity/layout/other_activity_entity_activity_layout.xml
@@ -33,6 +33,18 @@
             type="java.util.Map&lt;String, com.lonn.studentassistant.firebaselayer.viewModels.RecurringClassViewModel&gt;" />
 
         <variable
+            name="students"
+            type="java.util.Map&lt;String, com.lonn.studentassistant.firebaselayer.viewModels.StudentViewModel&gt;" />
+
+        <variable
+            name="pendingStudents"
+            type="java.util.Map&lt;String, com.lonn.studentassistant.firebaselayer.viewModels.StudentViewModel&gt;" />
+
+        <variable
+            name="allStudents"
+            type="java.util.Map&lt;String, com.lonn.studentassistant.firebaselayer.viewModels.StudentViewModel&gt;" />
+
+        <variable
             name="editing"
             type="Boolean" />
     </data>
@@ -103,47 +115,73 @@
                     android:visibility="@{entity.websiteVisible}" />
 
                 <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:id="@+id/filesCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:categoryTitle="@{`Files`}"
                     android:childEntities="@{files.values()}"
-                    android:editing="@{editing}"
                     android:deletable="@{true}"
-                    android:entityName="@{`file`}" />
+                    android:editing="@{editing}"
+                    android:entityName="@{`file`}"
+                    android:permissionLevel="@{1}"
+                    android:showEmpty="@{true}" />
 
                 <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:id="@+id/studentCategory"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:categoryTitle="@{`Students`}"
+                    android:childEntities="@{students.values().size() > 0? students.values() : null}"
+                    android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_TITLE_COMPARATOR}"
+                    android:editing="@{editing}"
+                    android:entityName="@{`students`}"
+                    android:permissionLevel="@{0}"
+                    android:showEmpty="@{true}"
+                    android:subcategoryDynamicGeneratorFunction="@{(category) -> CategoryGenerator.courseStudentCategories((CategoryViewModel) category, entity)}"
+                    android:unlinkable="@{true}" />
+
+                <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:id="@+id/professorsCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:categoryTitle="@{`Professors`}"
                     android:childEntities="@{professors.values()}"
+                    android:deletable="@{true}"
                     android:editing="@{editing}"
-                    android:unlinkable="@{true}"
-                    android:entityName="@{`professor`}" />
+                    android:entityName="@{`professor`}"
+                    android:permissionLevel="@{1}"
+                    android:unlinkable="@{true}" />
 
                 <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:id="@+id/recurringClassesCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:categoryTitle="@{`Regular schedule`}"
                     android:childEntities="@{recurringClasses.values()}"
                     android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_FIELD1_COMPARATOR}"
-                    android:editing="@{editing}"
                     android:deletable="@{true}"
+                    android:editing="@{editing}"
                     android:entityName="@{`regular class`}"
-                    android:showEmpty="@{false}"
+                    android:permissionLevel="@{1}"
+                    android:showAddButton="@{true}"
+                    android:showEmpty="@{true}"
                     android:showHeader="@{true}"
                     android:subcategoryGeneratorFunction="@{(category) -> CategoryGenerator.scheduleCategories((CategoryViewModel) category)}"
                     app:isTable="@{true}" />
 
                 <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                    android:id="@+id/oneTimeClassesCategory"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:categoryTitle="@{`Special schedule`}"
                     android:childEntities="@{oneTimeClasses.values()}"
                     android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_FIELD1_COMPARATOR}"
-                    android:editing="@{editing}"
-                    android:showEmpty="@{false}"
                     android:deletable="@{true}"
+                    android:editing="@{editing}"
+                    android:permissionLevel="@{1}"
+                    android:showAddButton="@{oneTimeClasses.values().size() == 0?false:true}"
+                    android:showEmpty="@{true}"
                     android:showHeader="@{true}"
                     android:subcategoryDynamicGeneratorFunction="@{(category) -> CategoryGenerator.oneTimeScheduleCategories((CategoryViewModel) category, oneTimeClasses.values())}"
                     app:isTable="@{true}" />
